сделал правки для проектов

--- a/src/components/common/Services/style.sass
+++ b/src/components/common/Services/style.sass
@@ -40,7 +40,7 @@
                         width: 71px
                         height: 2px
                         margin: 16px auto 25px
-                        background: $color_theme-1
+                        background: $color_violet
 
             .page__subtitle
                 padding-top: 10px
