--- a/src/components/containers/PageProject/PageProject.sass
+++ b/src/components/containers/PageProject/PageProject.sass
@@ -100,7 +100,8 @@
     display: flex
     flex-direction: column
     align-items: center
-    justify-content: center
+    // justify-content: center
+    justify-content: flex-start
     border-radius: 18px
     font-size: 22px
     font-weight: bold
@@ -110,12 +111,12 @@
     // background-color: $color_yellow-3
     // background-color: rgba($color_violet, .2)
     // background-color: rgba($color_orange, .5)
-    background-color: rgba($color_violet, .9)
+    background-color: rgba($color_violet, .3)
 
     &:nth-child(1n)
         // background-color: rgb(206, 17, 17)
         // background-color: rgba($color_violet, .2)
-        background-color: rgba($color_violet, .9)
+        background-color: rgba($color_violet, .3)
 // .projectPage
 //     position: absolute
 //     top: 0
