--- a/src/components/common/Projects/Projects.sass
+++ b/src/components/common/Projects/Projects.sass
@@ -6,6 +6,11 @@
 .projects
     padding: 80px 0
     overflow: hidden
+    &-inner
+        +from($break_sm)
+            display: flex
+            flex-wrap: wrap
+        
     .page__btn
         width: 100% !important
         display: block
