--- a/src/components/common/Header/style.sass
+++ b/src/components/common/Header/style.sass
@@ -22,6 +22,7 @@
     &__navbar
         +row-flex()
         +size(4)
+        justify-content: center
         a
             &:hover
                 color: $color_violet
