Сделал правки в текста Сделал правки в карточках Убрал кольца

--- a/src/components/common/Footer/Footer.sass
+++ b/src/components/common/Footer/Footer.sass
@@ -41,3 +41,5 @@
                         position: absolute
                         bottom: 0
                     
+.social__item-link 
+    margin-right: 15px
