--- a/src/components/common/Banner/Banner.sass
+++ b/src/components/common/Banner/Banner.sass
@@ -13,6 +13,11 @@
     transition: opacity 2s ease-out
     &__logo
         position: absolute
+        // width: 722px
+        // top: 13%
+        // &-svg
+        //     width: 100%
+        //     height: 100%
     .page
 
         &__subtitle
@@ -22,7 +27,7 @@
             +md-block
                 text-align: center
             .page_bold
-                color:  $color_violet
+                color: $color_violet
 
         &__subtitle,
         &__img,
@@ -46,7 +51,7 @@
             left: 0
             // opacity: 0.1
             color: #fff
-            
+
             +md-block
                 //FIXME: transform
                 transform: scale(0.3)
