--- a/src/components/common/Projects/Card.sass
+++ b/src/components/common/Projects/Card.sass
@@ -56,12 +56,12 @@
     transition: .2s
     margin-bottom: 25px
    
-    &:hover
-        transform: translateY(-1rem)
-        z-index: 100
-        background: rgba($color_black-1, .8)
-        & ~ .card
-            transform: translateX(130px)
+    // &:hover
+    //     transform: translateY(-1rem)
+    //     z-index: 100
+    //     background: rgba($color_black-1, .8)
+    //     & ~ .card
+    //         transform: translateX(130px)
 
     &:not(:nth-child(5n+1))
         margin-left: -150px    
