--- a/src/components/common/Banner/Banner.sass
+++ b/src/components/common/Banner/Banner.sass
@@ -51,10 +51,14 @@
             left: 0
             // opacity: 0.1
             color: #fff
-
             +md-block
                 //FIXME: transform
-                transform: scale(0.3)
+                transform: scale(0.9)
+            +sm-block
+                transform: scale(0.7)
+            +xs-block
+                transform: scale(0.5)
+
                 // width: 256px
                 // font-size: 50px
                 // line-height: 56px
