--- a/src/components/common/ExperienceCount/ExperienceCount.sass
+++ b/src/components/common/ExperienceCount/ExperienceCount.sass
@@ -16,6 +16,9 @@
         color: #fff
         +sm-block
             margin-bottom: 50px
+    .page__title-h2
+        +sm-block
+            font-size: 26px
     &-count
         display: flex
         align-items: center
@@ -39,3 +42,6 @@
 
             font-size: 100px
             line-height: 110px
+            +sm-block
+                font-size: 50px
+                line-height: 60px
