--- a/src/components/common/Skills/style.sass
+++ b/src/components/common/Skills/style.sass
@@ -27,7 +27,7 @@
             +size-xs(.9)
             +xs-block
                 padding: 20px 16px
-            
+
             .page__img
                 height: 100%
                 align-items: center
@@ -35,7 +35,7 @@
 
             .page__subtitle
                 padding-top: 10px
-                +xs(display,none)
+                // +xs(display,none)
 
     &.animated
         opacity: 1
