--- a/src/components/containers/PageProject/PageProject.sass
+++ b/src/components/containers/PageProject/PageProject.sass
@@ -97,14 +97,13 @@
                 align-items: center
 
 .swiperProjectCardPages
-    height: 750px
+    // height: 750px
     padding: 16px 22px !important
     // position: relative
     // list-style-type: none
     // padding: 0
     // max-width: 34em
     // margin: 20% auto 0
-
 
 .SwiperSlideProjectCardPage
     display: flex
@@ -116,7 +115,7 @@
     font-size: 22px
     font-weight: bold
     color: #fff
-    height: 100%
+    // height: 100%
     // background-color: $color_yellow-3
     // background-color: $color_yellow-3
     // background-color: rgba($color_violet, .2)
