--- a/src/components/common/Projects/Projects.sass
+++ b/src/components/common/Projects/Projects.sass
@@ -7,10 +7,10 @@
     padding: 80px 0
     overflow: hidden
     &-inner
-        +from($break_sm)
+        +from($break_xs)
             display: flex
             flex-wrap: wrap
-        
+
     .page__btn
         width: 100% !important
         display: block
@@ -30,12 +30,12 @@
             // margin: 0 7px;
             // padding-top: 10px;
 
-            &:hover
+            // &:hover
 
-                .page__figure::before,
-                .page__figure::after
-                    opacity: 1
-                    transform: scale(1)
+            //     .page__figure::before,
+            //     .page__figure::after
+            //         opacity: 1
+            //         transform: scale(1)
 
     .page__btn
         max-width: 180px
