--- a/src/components/common/ExperienceCount/ExperienceCount.sass
+++ b/src/components/common/ExperienceCount/ExperienceCount.sass
@@ -38,6 +38,8 @@
             display: flex
             flex-direction: column
             align-items: center
+            &:last-child
+                min-width: 280px
         &._hours
 
             font-size: 100px
