--- a/src/components/common/Projects/Projects.sass
+++ b/src/components/common/Projects/Projects.sass
@@ -17,6 +17,8 @@
         +row-flex()
         // justify-content: space-around;
         padding: 20px 0
+        +xs-block
+            justify-content: center
 
         .project
             +size(1)
