--- a/src/components/containers/PageProject/PageProject.sass
+++ b/src/components/containers/PageProject/PageProject.sass
@@ -24,9 +24,11 @@
                 +from($break_sm)
                     padding-right: 15%
                 .project-slider__toggles
-                    top: -54px
-                    right: 50%
-                    transform: translate(50%)
+                    justify-content: center
+                    +from(1023px)
+                        top: -54px
+                        right: 50%
+                        transform: translate(50%)
                 .page__text
                     font-size: 18px
                     line-height: 24px
