Исправил ссылки на проекты

--- a/src/components/common/Projects/Card.sass
+++ b/src/components/common/Projects/Card.sass
@@ -77,9 +77,7 @@
     &:nth-child(n+6)
         // display: none
     &-link
-        display: flex
-        flex-direction: column
-        align-items: center
+        margin: 0
     &-pages
         max-width: 300px
 
