Добавил технологии и фиксы для seo

--- a/src/components/containers/PageProject/PageProject.sass
+++ b/src/components/containers/PageProject/PageProject.sass
@@ -94,9 +94,15 @@
 
         &__technology
             padding-bottom: 14px
+            .page__ul
+                display: flex
+                gap: 10px
             .page__list_icon
                 display: flex
                 align-items: center
+                svg
+                    width: 30px
+                    height: 30px
 
 .swiperProjectCardPages
     // height: 750px
