--- a/src/styles/_page.sass
+++ b/src/styles/_page.sass
@@ -283,6 +283,12 @@
                 color: $color_black
                 background-color: $color_theme-1
 
+    &__ul
+        margin: 0
+
+    &__li
+        margin: 0
+
     &__list
         padding-left: 26px
         &_text
