--- a/src/components/common/Projects/Card.sass
+++ b/src/components/common/Projects/Card.sass
@@ -70,7 +70,8 @@
     //         transform: translateX(130px)
 
     &:not(:nth-child(5n+1))
-        margin-left: -15px
+        // margin-left: -15px
+        margin-left: 0
         +xs-block
             margin-left: 0
 
@@ -88,13 +89,15 @@
         // display: none
         display: flex
         align-items: center
-        gap: 20px
+        gap: 10px
         &__count
             // position: absolute
             top: 0
             left: 15px
             width: 50px
+            min-width: 50px
             height: 50px
+            min-height: 50px
             border-radius: 100%
             border: 5px solid $color_violet
             display: flex
