Добавил технологии в проекты

--- a/src/components/containers/PageProject/PageProject.sass
+++ b/src/components/containers/PageProject/PageProject.sass
@@ -96,6 +96,7 @@
             padding-bottom: 14px
             .page__ul
                 display: flex
+                flex-wrap: wrap
                 gap: 10px
             .page__list_icon
                 display: flex
